# lazydescriptor

./: .gitignore  README.md  main.py  pyproject.toml  script.py
lazydescriptor/: __init__.py
lazyfield/: __init__.py
reactivetools/: __init__.py
tests/: test_all.py  test_dataclass.py  test_lazyfield.py
